# illuminate

./: .clippy.toml  Cargo.toml
.db/: dev.db
discover/: Cargo.toml
discover/src/: main.rs
lifx/: Cargo.toml
lifx/examples/: async.rs  get_devices.rs
lifx/src/: client.rs  lib.rs  reader.rs  writer.rs
lifx/src/message/: color.rs  device.rs  light.rs  mod.rs
lifx/src/proto/: color.rs  device.rs  header.rs  light.rs  message.rs  mod.rs  packet.rs  serialize.rs
storage/: Cargo.toml
storage/migrations/2020-03-08-141659_init/: down.sql  up.sql
storage/src/: lib.rs  schema.rs  storage.rs
storage/src/models/: device.rs  mod.rs
