[package]
name = "discover"
version = "0.1.0"
authors = ["definitelycarter <definitelycarter@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
dotenv = "0.15.0"
lifx = { path = "../lifx" }
storage = { path = "../storage" }

[dependencies.tokio]
version = "0.2.11"
features = [
  "dns",
  "macros",
  "sync",
  "time",
  "udp",
]
